--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Headline</h1>
+			<h1>Star Shower</h1>
 		</header>
 			<section id="content">
 				<canvas id="Starfield" data-processing-sources="Starfield.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Pretty, isn't it?
 	    </footer>
 	</body>
 </html>
